--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Y7oNW1YMbOewObRX1P9eCGaQIWIyziUOLeJOY2ZrhMw6FKm1zfqvmFQ+h6WULjiuCW0otBfUWbBlwA3ABvJqgGN798sLTc0WsPmxNQn3JoYYZ5XzfpBNtSZ8OMXahL+Y">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d7TcGSB4OqHBKYOqb16qe9/jIv4/XhbEN4VZ7L4VhmTQO7kFOY45yxUBrMnFuS9ecrZCAR8tZSOVtng/uj16LITzDe5b+p7t9e7Pd/rUmGCHcxxJp36WFhnjnuTZqZuB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
