--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/-dsc0138-436x291.png" alt="Mobirise" title="">  
+                      <img src="assets/images/dsc0138-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Un5fGAEAtkVEAajCBKtAqhCGI/sFR9qNH435+gkDObemAV1E6N2g4i3UZtn3aGmJR/wFerQ05aFrPdoLhdVbKRgIMeAWhlDQ49WOr9i8WB5EKGnfxl7Gp3Vkp2yrl+zM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Fj8K/tBvphluKwjxsFP2OjCF6ao9AjmZNUgv4md3ghZ+BSB8vh+LhuH3X6r2vEiVKpnP9EDbx2wpXF2oWrAdYBvFFCMCYffuTkfP2kfdxen/qCRSJDb74jop3qjAW/Zg">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
