--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/-dsc0188-436x291.png" alt="Mobirise" title="">  
+                      <img src="assets/images/dsc0188-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ioImr6a9brRSx+Vv3Xn53N+jHns79e7xTXQaLX7xvIBqaPHAhSZcIO0uLXV5cZlQIgKNszS7doovvSWoJHbiLZorh+pONRWfrEd8KYpE4KuhhFoqvzjGt68nS95sOMcd">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4WrFWRcUgkUWQZZ5cE7SKouq2EY8VH9LZHF4ySe3C1BCYyXimXy/6Xb4gtXCJYvtWn5aHZAcjcVU9cVEwkoTtKH9H8SCFM9nd9CvjrHf01zfQldvyFomIlawIPo1n6Zs">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
