--- a/page13.html
+++ b/page13.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/-dsc0118-436x291.png" alt="Mobirise" title="">  
+                      <img src="assets/images/dsc0118-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ofzu38u0IyR6dqzYujcKLSX3SdWMeL9GLfwIuZHGGPB9/bX2xLYbgIbJA+aplSQT6kdbDZnSC1vpsGe5Xs08jpajSxRwSWOV04L4sh6RM0bi7r4ZsnMcaHNbBNuAwfdB">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xukGwtk3kGMRQiPlFn7BJZmBwSjnPiqtmLXrNMLrgni4JU2Z4xIH5LdollVJWNsooxHHvQ5tsdDWPwFD4/RUFdP8fCbvFbZwm3Q+WgYwVQ9EM0Xd6SPGk8vHHrhjiyZH">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
