--- a/page14.html
+++ b/page14.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/-dsc015611-436x291.png" alt="Mobirise" title="">  
+                      <img src="assets/images/dsc015611-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="arjldP9+DKQH/uPblNf545pKU5Z16iwX5hZ+x1Yn5gorsxlSbHuqHP8bXq9KmnlqMVE8pLIL42Df06LMuZNoxaKNAbVyPKiIXGPfX5tAM3Yag1r5ZQFtiK1UohC/KtqR">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3u8aPznYl6gGVaPoknjEL7uLqNFW7jH4eyEcSLv/zkUReNqRfAuKKWFzVUUAZ62JSFgZg2kAG+AVHaNYi9UisY6mgAn27d1HEjblfiQxJlnb+eF+/wRvSVkwLJda2ChG">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
