--- a/page15.html
+++ b/page15.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6QgbRhhrm" id="content5-4t">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QgbRhhrm" id="content5-4t">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/-dsc01601-436x291.png" alt="Mobirise" title="">  
+                      <img src="assets/images/dsc01601-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nFb8f5a9iycsM8V+Q++UC/WYf9SKgTlrmn1Fau8cFrjMVhnh4QnKu/e5h76r4Cz4Pe/AUnBKXCL4DxqohQ1B6OQv27PAz1mIT+ZSu31cgPV2OJWb5YWycDhRBXPNFVfd">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uz1JQSdjZsFozCIg3FcaHS9qbXrYzljGRp+PBAGicFk9pstlopagsjuXfPPFzbc6HIw2vFrJLs/KXEq7HRVgw9u6c7apTB/+Fmay3lsnb9+bAYcBqAlDqQQ2JR52SMcX">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
