--- a/page15.html
+++ b/page15.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6QgbRhhrm" id="content5-4t">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QgbRhhrm" id="content5-4t">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Q/E0MJknCd+N/eCkrllvKgPKPYefagbH+/ahE4pDdbmi8Dclvq3ojkh7PgF5uJ3LqCc6uPPSUQpVHKA32gTjQGzRfKEMvj5nLm1au0Vlu0uIHrOhNgmc1ePZh7a8Uvex">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VYYvh9xC6NvTcdjnzkK9sZ6M+hwF46ElfEhIMZY5vmHcEGw6wMDrdbYfEsyPSS3OMjeEDth4qUTbVXgHMfkJCEV5U+wpCU2d2FFO+4hE0mdcxGDp8Y7fC8tMR93yzCNC">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
