--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7tlEWdIXtoEPa3RvK2r8abAwgW4JQmECTCXhAZsbY5pkvqg05RskqfjL52Q1umF46CsMJBAaMs7UALO+Cvsv95UdhB3cr127n0Sf+qvKXfUrJpNbn4i2w9lixzcQJUDx">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kfkKsHYp2wZQOgW6Il/RCVHUmtCB3YLJhq5jhHuz7QcDGPy/SsmNA22rfsdDmo+21F56wRe1rtXZa1zA3NsHTBZfTwH1RXGv1d5n1ZAuokwURlMWNir3Ra3MGvFk6qhW">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
